--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "better-scroll": "^1.15.2",
     "core-js": "^3.4.4",
     "element-ui": "^1.4.13",
     "vue": "^2.6.10",
